# tempanzeige

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ai-rules.md  config.py  constants.py  dev.docker-compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_scraper.py  states.drawio  update_deps.py
app/bot/: bot.py  handlers.py  keyboards.py
app/core/: mongo_client.py  mongo_manager.py  preference_graph.py
app/data/: cities.json
app/llm/: formatters.py  gemini_client.py  nodes.py  states.py
app/models/: preferences.py
app/utils/: helpers.py  user_prefrences_manager.py
app/utils/data/: category_id.json
bot/: __init__.py  bot.py  handlers.py  keyboards.py
core/: constants.py  mongo_client.py  preference_graph.py
data/: categories.json  location_id.json  zipcodes.json
handlers/: __init__.py
llm/: __init__.py  formatters.py  gemini_client.py  nodes.py  states.py
models/: offer.py  preferences.py  user.py
prompts/: prompts.py
runners/: __init__.py  message_sender.py  offers_scraper.py
scraper/: __init__.py  object_creator.py  offers_scraper.py  parse_data.py  scraper.py  time_formatter.py
tests/: test_components.py  test_scraper.py  test_scraper_runner.py
utils/: helpers.py  user_prefrences_manager.py
