[project]
name = "kk"
version = "0.1.0"
description = "kk"
authors = [
    {name = "Eslami, Mahmoud",email = "mahmoud.eslami@students.hs-mainz.de"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
