[project]
name = "kk"
version = "0.1.0"
description = "kk"
authors = [
    {name = "Eslami, Mahmoud",email = "mahmoud.eslami@students.hs-mainz.de"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-dotenv>=1.1.1,<2.0.0",
    "rapidfuzz>=3.13.0,<4.0.0",
    "pymongo>=4.13.2,<5.0.0",
    "python-telegram-bot>=22.3,<23.0",
    "pydantic>=2.0.0,<3.0.0",
    "langchain>=0.3.23,<1.0.0",
    "langchain-core>=0.3.59,<1.0.0",
    "langchain-google-genai>=1.0.0,<2.0.0",
    "langchain-community>=0.3.21,<1.0.0",
    "langchain-openai>=0.3.17,<1.0.0",
    "langchain-experimental>=0.3.4,<1.0.0",
    "langgraph>=0.4.5,<1.0.0",
    "psutil>=5.7.0,<6.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
